various spacing, sizing, coloring fixes

--- a/css/main.css
+++ b/css/main.css
@@ -340,6 +340,10 @@ body {
   z-index: 10;
 }
 
+.faq-content {
+  margin-top: 60vh;
+}
+
 #faq {
   text-align: center;
 }
@@ -348,16 +352,15 @@ body {
   text-align: center;
 }
 
-#faq h4{
-  text-align: center;
-  color: white;
-  font-size: 20px;  
-  padding-top: 40%;
-}
-
 #faq a {
   font-weight: bold;
   color: white;
+}
+
+#faq .additional-questions {
+  text-align: center;
+  color: white;
+  font-size: 30px;  
 }
 
 #all-questions {
@@ -388,7 +391,6 @@ body {
 
 .faq .active .question:after {
   content: "\2212";
-  color: white;
 }
 
 .faq .question {
@@ -397,7 +399,7 @@ body {
   cursor: pointer;
   transition: color 0.5s ease;
   margin-bottom: 20px;
-  color: white;
+  color: #384d75;
   background-color: rgba(255,255,255,0.25);
   border-radius: 10px;
   padding: 10px;
@@ -720,7 +722,6 @@ iframe {
   .section#about {
     background-size: cover;
     background-position: center -50px;
-    margin-bottom: 70vh;
   }
 
   #about-details-wrapper {
@@ -802,6 +803,7 @@ iframe {
 
   .section-content {
     margin-top: 20px;
+    width: 100%;
   }
 
   #title-name {
@@ -892,7 +894,7 @@ iframe {
   }
 
   .section#about{
-    margin-bottom: 70vh;
+    margin-bottom: 100vh;
     min-height: 15vh;
   }
 
@@ -1024,16 +1026,13 @@ iframe {
     margin-top: 20vh;
   }
 
-  #faq .additional-questions {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 15px;
-    text-align: center;
-    color: white;
-    padding: 20px;
+  #faq {
+    width: 100%;
+    padding: 0 16px;
   }
 
-  #faq {
-    text-align: left;
+  #faq * {
+    max-width: 100%;
   }
 
   #faq h1{
@@ -1045,6 +1044,10 @@ iframe {
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
     color: white;
+  }
+
+  #faq .additional-questions {
+    font-size: 20px;  
   }
 
   .faq-content {
@@ -1073,7 +1076,6 @@ iframe {
   .faq .question:after {
     content: '\002B';
     font-size: 20px;
-    color: white;
     float: right;
     font-weight: bold;
   }
@@ -1088,7 +1090,7 @@ iframe {
     cursor: pointer;
     transition: color 0.5s ease;
     margin-bottom: 20px;
-    color: white;
+    color: #384d75;
     background-color: rgba(255,255,255,0.25);
     border-radius: 10px;
     padding: 10px;
@@ -1104,11 +1106,6 @@ iframe {
 
   .faq .answer {
     font-size: 16px;
-    line-height: 24px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease, padding-bottom 0.5s ease;
-    color: #C8D5ED;
   }
 
   .faq li.active .answer {
@@ -1349,11 +1346,6 @@ iframe {
 
   #header-below h1{
     font-size: 40px;
-  }
-
-  .section#faq h3,
-  .answer {
-    font-size: 12px;
   }
 
   .section#sponsors .sponsor-thanks h4{
